<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>id_track_utils</name>
  <version>0.5.3</version>
  <description>Utilities for procedurally generating tracks and converting between different formats.</description>

  <maintainer email="mateusz@lichota.net">Mateusz Lichota</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>ament_index_python</depend>

  <depend>imperial_driverless_interfaces</depend>
  <depend>geometry_msgs</depend>


  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-qt5-bindings</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
