<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imperial_driverless_gazebo_plugins</name>
  <version>2.0.0</version>
  <description>Gazebo plugins for full gazebo simulator.</description>

  <maintainer email="mateusz@lichota.net">Mateusz Lichota</maintainer>

  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>imperial_driverless_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
